Changes/ Add refreshToken and changes swagger and responses
