# src/middlewares/envValidator.ts
@@ -1,16 +1,17 @@
 import { jsonStatus, messages, status } from "@utils/helpers/api.responses";
 
 const requiredEnvVars = [
-    // 'TOKEN_EXPIRY',
-    // 'OTP_LENGTH',
-    // 'OTP_EXPIRY_TIME_MIN',
-    // 'GMAIL_PASSWORD',
-    // 'GMAIL_USER',
-    // 'EMAIL_SERVICE',
+    'TOKEN_EXPIRY',
+    'OTP_LENGTH',
+    'OTP_EXPIRY_TIME_MIN',
+    'GMAIL_PASSWORD',
+    'GMAIL_USER',
+    'EMAIL_SERVICE',
     'NODE_ENV',
     'PORT',
     'DB_URL',
     'SECRET_KEY',
+    'REFRESH_TOKEN'
     // 'BASE_URL',
     // 'FRONTEND_URL',
     // 'BACKEND_SERVER_URL'
